test: add tests of new methods and add custom exceptions in these methods